# pr-has-issues-action

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: main.yml  pr.yml  push.yml
src/: main.rs
