[package]
name = "pr-has-issues-action"
version = "0.1.0"
edition = "2021"
description = "A GitHub action that checks for issues references in pull requests."
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ngerakines/pr-has-issues-action"
homepage = "https://github.com/ngerakines/pr-has-issues-action"
license = "MIT"
publish = true

[dependencies]
anyhow = "1.0.70"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
